--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@onflow/fcl": "^1.12.3",
+    "@tauri-apps/plugin-shell": "^2.0.1",
+    "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.14"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "typescript": "^5",
