--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@onflow/fcl": "^1.12.3",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "daisyui": "^4.12.14",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
