--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/plugin-shell": "^2.0.1",
     "daisyui": "^4.12.14",
     "next": "14.2.14",
+    "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0"
