--- a/trophyhunter/package.json
+++ b/trophyhunter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metaloot-tauri",
+  "name": "sample-gae",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@onflow/fcl": "^1.12.3",
+    "daisyui": "^4.12.14",
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0",
-    "@tauri-apps/plugin-shell": "^2.0.1",
-    "daisyui": "^4.12.14",
-    "next": "14.2.14",
-    "pino-pretty": "^13.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "@tauri-apps/plugin-shell": "^2.0.1"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -28,6 +25,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "15.0.3"
   }
 }
