--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -21,13 +21,13 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "22.9.0",
+    "@types/react": "18.3.12",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "typescript": "5.6.3"
   }
 }
