--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@onflow/fcl": "^1.12.3",
+    "@onflow/fcl": "1.12.3",
+    "@onflow/typedefs": "^1.3.1",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
