--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -13,7 +13,9 @@
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "@types/express": "^5.0.0",
     "daisyui": "^4.12.14",
+    "express": "^4.21.1",
     "next": "14.2.14",
     "pino-pretty": "^13.0.0",
     "react": "^18",
