--- a/metaloot-tauri/src-tauri/Cargo.toml
+++ b/metaloot-tauri/src-tauri/Cargo.toml
@@ -25,3 +25,14 @@ tauri = { version = "2.0.3", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0"
 tauri-plugin-deep-link = "2.0.0"
+
+
+
+
+chrono = "0.4"
+uuid = { version = "1.0", features = ["v4"] }
+hyper = { version = "0.14", features = ["full"] }
+tower = "0.4"
+tokio = { version = "1.0", features = ["full"] } 
+actix-web = "4.9.0"
+once_cell = "1.20.2"
