--- a/trophyhunter/src-tauri/Cargo.toml
+++ b/trophyhunter/src-tauri/Cargo.toml
@@ -24,3 +24,6 @@ log = "0.4"
 tauri = { version = "2.0.3", features = [] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-shell = "2.0.0"
+tauri-plugin-deep-link = "2.0.0"
+url = "2.5.3"
+reqwest = { version = "0.11", features = ["json"] }
