--- a/metaloot-tauri/tsconfig.json
+++ b/metaloot-tauri/tsconfig.json
@@ -6,6 +6,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "noImplicitAny": false,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
