--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@onflow/fcl": "^1.12.3",
+    "@react-three/drei": "^9.116.3",
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
