--- a/metaloot-tauri/package.json
+++ b/metaloot-tauri/package.json
@@ -15,6 +15,7 @@
     "@tauri-apps/api": "^2.1.1",
     "@tauri-apps/plugin-deep-link": "^2.0.0",
     "@tauri-apps/plugin-shell": "^2.0.1",
+    "@tauri-apps/plugin-websocket": "~2",
     "@types/express": "^5.0.0",
     "daisyui": "^4.12.14",
     "express": "^4.21.1",
@@ -22,7 +23,8 @@
     "pino-pretty": "^13.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "websocket": "^1.0.35"
   },
   "devDependencies": {
     "@types/node": "22.9.0",
