--- a/metaloot-tauri/src-tauri/Cargo.toml
+++ b/metaloot-tauri/src-tauri/Cargo.toml
@@ -36,3 +36,5 @@ tower = "0.4"
 tokio = { version = "1.0", features = ["full"] } 
 actix-web = "4.9.0"
 once_cell = "1.20.2"
+tauri-plugin-localhost = "2"
+tauri-plugin-websocket = "2"
